<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/label_pornstars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pornstars"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/video_pornstars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:alignContent="flex_start"
            app:alignItems="flex_start"
            app:flexWrap="wrap"/>

        <TextView
            android:id="@+id/label_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/video_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:alignContent="flex_start"
            app:alignItems="flex_start"
            app:flexWrap="wrap"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/video_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:alignContent="flex_start"
            app:alignItems="flex_start"
            app:flexWrap="wrap"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_on"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/video_added_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/ecstasy"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/video_approved_on_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approved_on"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/video_approved_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/ecstasy"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>