<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/favorites_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_medium"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/inactive"
                app:srcCompat="@drawable/ic_starred"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="@string/favorites"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@color/inactive"/>


        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_medium"
            tools:targetApi="lollipop">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:tint="@color/inactive"
                app:srcCompat="@drawable/ic_key"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_toEndOf="@id/password_icon"
                android:layout_toStartOf="@id/password_switch"
                android:text="@string/use_password"
                android:textSize="@dimen/text_medium"/>

            <Switch
                android:id="@+id/password_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@color/inactive"/>

        <RelativeLayout
            android:id="@+id/auto_fullscreen_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_medium"
            tools:targetApi="lollipop">

            <ImageView
                android:id="@+id/auto_fullscreen_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:tint="@color/inactive"
                app:srcCompat="@drawable/ic_screen_rotation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_toEndOf="@id/auto_fullscreen_icon"
                android:layout_toStartOf="@id/auto_fullscreen_switch"
                android:text="@string/auto_fullscreen"
                android:textSize="@dimen/text_medium"/>

            <Switch
                android:id="@+id/auto_fullscreen_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@color/inactive"/>

        <LinearLayout
            android:id="@+id/fast_forward_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_medium"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/inactive"
                app:srcCompat="@drawable/ic_fast_forward"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="@string/fast_forward"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@color/inactive"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/about"
            android:textSize="@dimen/text_medium"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:textSize="@dimen/text_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/inactive"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>